# detection-model-training

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  train_yolo10.ipynb  train_yolo11.ipynb  train_yolo12.ipynb  train_yolo8.ipynb  train_yolo9.ipynb
dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
runs/detect/runs/detect/yolo12_animal_detection/: args.yaml  results.csv
