[project]
name = "modelo-animales"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "coremltools>=9.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "onnx>=1.12.0,<2.0.0",
    "onnx-graphsurgeon>=0.3.26",
    "onnx2tf>=1.26.3",
    "onnxruntime>=1.23.2",
    "onnxslim>=0.1.82",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "seaborn>=0.13.2",
    "sng4onnx>=1.0.1",
    "tensorflow>=2.20.0",
    "tf-keras<=2.19.0",
    "ultralytics>=8.4.7",
]
